--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: gitea/checkout@v4
 
       - name: Install Podman
         run: |
