--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: gitea/checkout@v4
 
       - name: Install Podman
         run: |
