--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -10,7 +10,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # IMPORTANT: Gitea checkout (no Node required)
       - name: Checkout repository
         uses: gitea/checkout@v4
 
@@ -25,9 +24,9 @@ jobs:
           VERSION="$(cat VERSION | tr -d ' \n')"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Log in to container registry
+      - name: Registry login
         env:
-          REGISTRY: ${{ vars.REGISTRY }}           # e.g. loxthelion.com OR ghcr.io
+          REGISTRY: ${{ vars.REGISTRY }}
           REGISTRY_USER: ${{ secrets.REGISTRY_USER }}
           REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
         run: |
@@ -38,7 +37,7 @@ jobs:
       - name: Build image (multi-tag)
         env:
           REGISTRY: ${{ vars.REGISTRY }}
-          IMAGE: ${{ vars.IMAGE }}                 # e.g. lyncolnmd/tvj-epg OR tvj-epg
+          IMAGE: ${{ vars.IMAGE }}
           VERSION: ${{ steps.version.outputs.version }}
         run: |
           SHORT_SHA="${GITHUB_SHA::7}"
