--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -40,8 +40,9 @@ jobs:
 
       - name: Install Podman
         run: |
-          sudo apt-get update
-          sudo apt-get install -y podman
+          apt-get update
+          apt-get install -y podman
+          podman --version
 
       - name: Read version
         id: version
