--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Install Podman
         run: |
-          apt-get update
-          apt-get install -y podman
+          apt update
+          apt install -y podman
           podman --version
 
       - name: Read version
