--- a/.gitea/workflows/dockerbuild.yml
+++ b/.gitea/workflows/dockerbuild.yml
@@ -26,7 +26,7 @@ jobs:
 
           if [ -n "${GITEA_TOKEN:-}" ]; then
             CLONE_URL="${BASE}/${REPO}.git"
-            CLONE_URL="$(echo "$CLONE_URL" | sed -E 's#^https://#https://oauth2:'"${GITEA_TOKEN}"'@#')"
+            #CLONE_URL="$(echo "$CLONE_URL" | sed -E 's#^https://#https://oauth2:'"${GITEA_TOKEN}"'@#')"
             git clone "$CLONE_URL" .
           else
             git clone "${BASE}/${REPO}.git" .
@@ -48,14 +48,13 @@ jobs:
       # -------------------------------------------------
       - name: Docker login
         env:
-          REGISTRY: ${{ vars.REGISTRY }}           # e.g. loxthelion.com:5050 or ghcr.io
+          REGISTRY: loxthelion.com/gitea           # e.g. loxthelion.com:5050 or ghcr.io
           REGISTRY_USER: ${{ secrets.REGISTRY_USER }}
           REGISTRY_TOKEN: ${{ secrets.TEA_TOKEN }}
         run: |
           echo "$REGISTRY_TOKEN" | docker login "$REGISTRY" \
             -u "$REGISTRY_USER" \
-            --password-stdin 
-            --tls-verify=false 
+            --password-stdin  
 
       # -------------------------------------------------
       # Build image with Docker (multi-tag)
