--- a/.gitea/workflows/dockerbuild.yml
+++ b/.gitea/workflows/dockerbuild.yml
@@ -61,8 +61,8 @@ jobs:
       # -------------------------------------------------
       - name: Build image (Docker, multi-tag)
         env:
-          REGISTRY: ${{ vars.REGISTRY }}/gitea
-          IMAGE: ${{ secrets.REGISTRY_USER }}/tvj-epg                 # e.g. lyncolnmd/tvj-epg
+          REGISTRY: ${{ vars.REGISTRY }}/${{ vars.BASE_URL }}
+          IMAGE: ${{ vars.REGISTRY_USER }}/tvj-epg                 # e.g. lyncolnmd/tvj-epg
           VERSION: ${{ steps.version.outputs.version }}
         run: |
           SHORT_SHA="${GITHUB_SHA::7}"
@@ -80,8 +80,8 @@ jobs:
       # -------------------------------------------------
       - name: Push all tags
         env:
-          REGISTRY: ${{ vars.REGISTRY }}/gitea
-          IMAGE: ${{ secrets.REGISTRY_USER }}/tvj-epg
+          REGISTRY: ${{ vars.REGISTRY }}/${{ vars.BASE_URL }}
+          IMAGE: ${{ vars.REGISTRY_USER }}/tvj-epg
           VERSION: ${{ steps.version.outputs.version }}
         run: |
           SHORT_SHA="${GITHUB_SHA::7}"
