--- a/.gitea/workflows/dockerbuild.yml
+++ b/.gitea/workflows/dockerbuild.yml
@@ -84,9 +84,9 @@ jobs:
           IMAGE: david/tvj-epg
           VERSION: ${{ steps.version.outputs.version }}
         run: |
-          SHORT_SHA="${GITHUB_SHA::7}"
+          #SHORT_SHA="${GITHUB_SHA::7}"
           FULL_IMAGE="$REGISTRY/$IMAGE"
 
           docker push "$FULL_IMAGE:latest"
           docker push "$FULL_IMAGE:v$VERSION"
-          docker push "$FULL_IMAGE:sha-$SHORT_SHA"
+          #docker push "$FULL_IMAGE:sha-$SHORT_SHA"
