--- a/.gitea/workflows/dockerbuild.yml
+++ b/.gitea/workflows/dockerbuild.yml
@@ -79,15 +79,15 @@ jobs:
       # -------------------------------------------------
       # Push all tags
       # -------------------------------------------------
-      - name: Push all tags
-        env:
-          REGISTRY: ${{ vars.REGISTRY }}
-          IMAGE: david/tvj-epg
-          VERSION: ${{ steps.version.outputs.version }}
-        run: |
-          SHORT_SHA="${GITHUB_SHA::7}"
-          FULL_IMAGE="$REGISTRY/david/tvj-epg"
+     # - name: Push all tags
+     #   env:
+     #     REGISTRY: ${{ vars.REGISTRY }}
+     #     IMAGE: david/tvj-epg
+     #     VERSION: ${{ steps.version.outputs.version }}
+     #   run: |
+     #     SHORT_SHA="${GITHUB_SHA::7}"
+     #     FULL_IMAGE="$REGISTRY/david/tvj-epg"
 
-          docker push "$FULL_IMAGE:latest"
-          docker push "$FULL_IMAGE:v$VERSION"
-          docker push "$FULL_IMAGE:sha-$SHORT_SHA"
+     #     docker push "$FULL_IMAGE:latest"
+     #     docker push "$FULL_IMAGE:v$VERSION"
+     #     docker push "$FULL_IMAGE:sha-$SHORT_SHA"
